# newsfeeder

./: .gitignore  Makefile  README.md  TECHNICAL_SETUP.md  news_digest.html  pyproject.toml
.github/workflows/: daily-digest.yml
backend/: config.yaml  export_json_from_cache.py  generate_news_digest.py  processing_cache.db  sqlite_cache.py
backend/topics/: ai.json  climate.json  devops.json  index.json  python.json
code/: config.yaml  generate_news_digest.py  processing_cache.py  sqlite_cache.py
code/topics/: ai.json  index.json
frontend/: package-lock.json  package.json
frontend/public/: 404.html  index.html  matched_entries.json
frontend/public/topics/: climate.json  devops.json
frontend/src/: App.js
frontend/src/components/: ArticleList.js  KeywordFilters.js  NewsDigest.js  TabNavigation.js
newsfeeder-ui/: package.json
newsfeeder-ui/public/: matched_entries.json
newsfeeder-ui/public/topics/: climate.json  devops.json  python.json
newsfeeder-ui/src/: App.css  App.js
newsfeeder-ui/src/components/: ArticleList.js  DateFilter.js  KeywordFilters.js  NewsDigest.js  NewsDigest_new.js  NewsDigest_old.js  TabNavigation.js
